# Chess

./: .gitignore  CMakeLists.txt  Chess.vcxproj  Chess.vcxproj.filters  README.md  README.txt  alphabeta.h  bestmovealgorithm.h  chessai.h  chessboard.cpp  chessboard.h  chessmoves.h  piece.h  printfunctions.h  value.h
src/: alphabeta.h  bestmovealgorithm.h  chessai.h  chessboard.cpp  chessboard.h  chessmoves.h  main.cpp  minimax.h  move.h  negascout.h  pawn.h  piece.h  position.h  printfunctions.h  random.h  value.h
